@@ -1,3 +1,8 @@
+2019-08-17  Niels Möller  <nisse@lysator.liu.se>
+
+	* mpn/generic/gcd_22.c (mpn_gcd_22): New implementation with less
+	branches.
+
 2019-08-16 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* mpn/generic/brootinv.c: Shorten computations, using even exponent.
